refactor: gui-only implementation and optimization Optimized caching and code structure Fixed Spigot compatibility Added dynamic rows and chat-input for homes